--- a/styles/global.css
+++ b/styles/global.css
@@ -73,4 +73,5 @@ main {
   letter-spacing: 0.04em;
   color: var(--text-color-primary);
   box-shadow: 8px 4px 6px rgba(2, 6, 23, 0.25);
+  padding: 8px;
 }
