--- a/styles/sections.css
+++ b/styles/sections.css
@@ -20,36 +20,41 @@ section header{
     }
 }
 
-#featured img {
-    height: 100%;
-    object-fit: cover;
-}
+#featured{
+    grid-area: featured;
 
-#featured .card {
-    overflow: hidden; /* esconde o transbordamento da caixa */
-    border-radius: 4px;
-    position: relative;
-}
+    img {
+        height: 100%;
+        object-fit: cover;
+    }
 
-#featured .card::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    top: 50%;
-    background: linear-gradient(180deg, transparent 0%, #020617 100%);
-}
+    .card {
+        overflow: hidden; /* esconde o transbordamento da caixa */
+        border-radius: 4px;
+        position: relative;
 
-#featured .card figcaption {
-    position: absolute;
-    bottom: 0;
-    padding: 24px;
-}
+        &::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            top: 50%;
+            background: linear-gradient(180deg, transparent 0%, #020617 100%);
+        }
 
-#featured .card figcaption h2 {
-    margin-top: 8px;
+        figcaption {
+            position: absolute;
+            bottom: 0;
+            padding: 24px;
+
+            h2 {
+                margin-top: 8px;
+            }
+        }
+    }
 }
 
 #weekly{
+    grid-area: weekly;
 
     &>div{
         grid-template-columns: repeat(4, 292px);
@@ -70,7 +75,47 @@ section header{
 
         p{
             margin-top: 8px;
-            font-weight: 800;
+
         }
+    }
+}
+
+#ai{
+    grid-area: ai;
+
+    img{
+        width: 176px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+    }
+
+    h3{
+        margin-block: 8px 4px;
+    }
+
+    p{
+        color: var(--text-color-secondary);
+    }
+
+    div{
+        margin-block: 8px;
+    }
+}
+
+aside{
+    grid-area: aside;
+}
+
+#more{
+    margin-top: 32px;
+
+    img{
+        width: 72px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+    }
+
+    h3{
+        margin-top: 8px;
     }
 }
